--- a/index.html
+++ b/index.html
@@ -163,48 +163,80 @@
                         <div class="container-fluid row">
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#leaflet" href="#">Leaflet-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Geerooniimoo.io</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">python-api-challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Geerooniimoo.io</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">plotly-challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">python-api-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#pandas" href="#">pandas-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
                                 href="#">D3-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">SQLAlchemy-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Mission_To_Mars</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#matplotlib" href="#">matplotlib-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">NFL-RECORDS</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">heroesmemorygame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">VBA-Scripting</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">NFL-RECORDS</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">heroesmemorygame</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">VBA-Scripting</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
                                 href="#">SQL-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">infosectechnology</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">SpiritualEngineering</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">JavaScript-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">infosectechnology</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">SpiritualEngineering</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">JavaScript-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
                                 href="#">Web-Design-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_to_Jupiter</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Password-Generator</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">FriendFinder</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Gamazon</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">realnewslinks</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">HYBC</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">New-York-Times-API</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">liri-node-app</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">WeatherForecast</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">GifTastic</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Calender</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">crudaburger</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">porfolio</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">NodeGuessGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">TrainScheduler</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">CristalCollectorGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Hangman-Game</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">BoxingGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Responsive-HYBC</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Bootstrap-Portfolio</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Basic-Portfolio</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
+                                href="#">Mission_to_Jupiter</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Password-Generator</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">FriendFinder</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Gamazon</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">realnewslinks</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">HYBC</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">New-York-Times-API</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">liri-node-app</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">WeatherForecast</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">GifTastic</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Calender</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">crudaburger</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">porfolio</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">NodeGuessGame</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">TrainScheduler</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">CristalCollectorGame</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Hangman-Game</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">BoxingGame</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Responsive-HYBC</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Bootstrap-Portfolio</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                                href="#">Basic-Portfolio</a>
                             </ul>
                         </div>
                     </div>
@@ -433,7 +465,8 @@
                     <div class="modal-body">
                         <div class="row my-4">
                             <div class="col-md-3"></div>
-                            <div class="col-md-6"><img src="./assets/images/D3-Challenge.gif" alt="d3_gif" class="w-100"></div>
+                            <div class="col-md-6"><img src="./assets/images/D3-Challenge.gif" alt="d3_gif"
+                                    class="w-100"></div>
                         </div>
                         <p>
                             Analyzed the current trends shaping people's lives, as well as created charts, graphs, and
@@ -445,9 +478,55 @@
                         </p>
                         <ul>
                             <li>Utilized **html, Javascript and D3 library** to create a scatter plot between two of the
-                                data variables such as `Healthcare vs. Poverty` or `Smokers vs. Age` that represents each
+                                data variables such as `Healthcare vs. Poverty` or `Smokers vs. Age` that represents
+                                each
                                 state with circle elements. Pulled in the data from `data.csv` by using the `d3.csv`
                                 function. Included state abbreviations in the circles and tool-tip.</li>
+                        </ul>
+                        <div class="row mt-4">
+                            <div class="col-md-12"><img src="./assets/images/d3_1.png" class="w-100" alt="web_2">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="jup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Mission To Jupiter
+                        </h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row my-4">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-6"><img src="./assets/images/D3-Challenge.gif" alt="d3_gif"
+                                    class="w-100"></div>
+                        </div>
+                        <p>
+                            Built a web application that does a live scrape of various websites for data related to Jupeter and
+                            displays the information in a single HTML page.
+                        </p>
+                            <h2>
+                                Technologies used are:
+                            </h2>
+                        <ul>
+                            <li> <strong>Pthon</strong> language used to create scraping script</li>
+                            <li> <strong>HTML</strong> used to create a template HTML file called `index.html` to display Jupiter data</li>
+                            with the appropriate HTML elements
+                            <li> <strong>Bootstrap</strong> CDN link used to outsource some CSS</li>
+                            <li> <strong>CSS</strong> used to give htmpl page more personal style</li>
+                            <li> <strong>Flask App:</strong> to create server which runs the script and render the home page with the</li>
+                            use of a couple of routes
+                            <li> <strong>Jupyter Notebook</strong> to build and test the scraping script</li>
+                            <li> <strong>BeautifulSoup</strong> to parse through the html scrapped</li>
+                            <li> <strong>Pandas</strong> to form the dataset from data scrapped</li>
+                            <li> <strong>Splinter</strong> http client used to automatically navigate the web to obtain info regarding</li>
+                            Jupiter
+                            <li> <strong>MongoDB</strong> database used to contain Jupiter's data collected</li>
+
                         </ul>
                         <div class="row mt-4">
                             <div class="col-md-12"><img src="./assets/images/d3_1.png" class="w-100" alt="web_2">
