--- a/index.html
+++ b/index.html
@@ -502,34 +502,35 @@
                     <div class="modal-body">
                         <div class="row my-4">
                             <div class="col-md-3"></div>
-                            <div class="col-md-6"><img src="./assets/images/D3-Challenge.gif" alt="d3_gif"
-                                    class="w-100"></div>
+                            <div class="col-md-6">
+                                <img src="./assets/images/jup_2.png" alt="d3_gif" class="w-100">
+                            </div>
                         </div>
-                        <p>
-                            Built a web application that does a live scrape of various websites for data related to Jupeter and
-                            displays the information in a single HTML page.
-                        </p>
-                            <h2>
+                        <div class="container">
+                            <h4>
+                                Built a web application that does a live scrape of various websites for data related
+                                to Jupeter and
+                                displays the information in a single HTML page.
+                            </h4>
+                            <img src="./assets/images/jup_3.png" alt="jup_1" class="w-100 mt-4">
+                            <h4 class="mt-4" >
                                 Technologies used are:
-                            </h2>
-                        <ul>
-                            <li> <strong>Pthon</strong> language used to create scraping script</li>
-                            <li> <strong>HTML</strong> used to create a template HTML file called `index.html` to display Jupiter data</li>
-                            with the appropriate HTML elements
-                            <li> <strong>Bootstrap</strong> CDN link used to outsource some CSS</li>
-                            <li> <strong>CSS</strong> used to give htmpl page more personal style</li>
-                            <li> <strong>Flask App:</strong> to create server which runs the script and render the home page with the</li>
-                            use of a couple of routes
-                            <li> <strong>Jupyter Notebook</strong> to build and test the scraping script</li>
-                            <li> <strong>BeautifulSoup</strong> to parse through the html scrapped</li>
-                            <li> <strong>Pandas</strong> to form the dataset from data scrapped</li>
-                            <li> <strong>Splinter</strong> http client used to automatically navigate the web to obtain info regarding</li>
-                            Jupiter
-                            <li> <strong>MongoDB</strong> database used to contain Jupiter's data collected</li>
-
-                        </ul>
-                        <div class="row mt-4">
-                            <div class="col-md-12"><img src="./assets/images/d3_1.png" class="w-100" alt="web_2">
+                            </h4>
+                            <ul>
+                                <li> <strong>Python language:</strong> used to create scraping script</li>
+                                <li> <strong>HTML:</strong> used to create a template HTML file called `index.html` to display Jupiter data with the appropriate HTML elements</li>
+                                <li> <strong>Bootstrap:</strong> CDN link used to outsource some CSS</li>
+                                <li> <strong>CSS:</strong> used to give htmpl page more personal style</li>
+                                <li> <strong>Flask App:</strong> to create server which runs the script and render the homepage with the use of a couple of routes</li>
+                                <li> <strong>Jupyter Notebook:</strong> to build and test the scraping script</li>
+                                <li> <strong>BeautifulSoup:</strong> to parse through the html scrapped</li>
+                                <li> <strong>Pandas:</strong> to form the dataset from data scrapped</li>
+                                <li> <strong>Splinter/Browser:</strong> http client used to automatically navigate the web to obtain info regarding Jupiter</li>
+                                <li> <strong>MongoDB:</strong> database used to contain Jupiter's data collected</li>
+                            </ul>
+                            <div class="row mt-4">
+                                <div class="col-md-12"><img src="./assets/images/jup_1.gif" class="w-100" alt="jup_3">
+                                </div>
                             </div>
                         </div>
                     </div>
