--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                         <div class="container">
                             <h4>
                                 Built a web application that does a live scrape of various websites for data related
-                                to Jupeter and
+                                to Jupiter and
                                 displays the information in a single HTML page.
                             </h4>
                             <img src="./assets/images/jup_3.png" alt="jup_1" class="w-100 mt-4">
