--- a/index.html
+++ b/index.html
@@ -163,79 +163,79 @@
                         <div class="container-fluid row">
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#leaflet" href="#">Leaflet-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Geerooniimoo.io</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
-                                href="#">plotly-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                                data-bs-target="#plotly" href="#">plotly-challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">python-api-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#pandas" href="#">pandas-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
                                 href="#">D3-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">SQLAlchemy-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Mission_To_Mars</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#matplotlib" href="#">matplotlib-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NFL-RECORDS</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">heroesmemorygame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">VBA-Scripting</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
                                 href="#">SQL-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">infosectechnology</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">SpiritualEngineering</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">JavaScript-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
                                 href="#">Web-Design-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
                                 href="#">Mission_to_Jupiter</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Password-Generator</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">FriendFinder</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Gamazon</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">realnewslinks</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">HYBC</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">New-York-Times-API</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">liri-node-app</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">WeatherForecast</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">GifTastic</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Calender</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">crudaburger</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">porfolio</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">NodeGuessGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">TrainScheduler</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">CristalCollectorGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Hangman-Game</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">BoxingGame</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Responsive-HYBC</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Bootstrap-Portfolio</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target=""
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">Basic-Portfolio</a>
                             </ul>
                         </div>
@@ -491,6 +491,7 @@
                 </div>
             </div>
         </div>
+
         <div class="modal fade" id="jup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
@@ -513,23 +514,53 @@
                                 displays the information in a single HTML page.
                             </h4>
                             <img src="./assets/images/jup_3.png" alt="jup_1" class="w-100 mt-4">
-                            <h4 class="mt-4" >
+                            <h4 class="mt-4">
                                 Technologies used are:
                             </h4>
                             <ul>
                                 <li> <strong>Python language:</strong> used to create scraping script</li>
-                                <li> <strong>HTML:</strong> used to create a template HTML file called `index.html` to display Jupiter data with the appropriate HTML elements</li>
+                                <li> <strong>HTML:</strong> used to create a template HTML file called `index.html` to
+                                    display Jupiter data with the appropriate HTML elements</li>
                                 <li> <strong>Bootstrap:</strong> CDN link used to outsource some CSS</li>
                                 <li> <strong>CSS:</strong> used to give htmpl page more personal style</li>
-                                <li> <strong>Flask App:</strong> to create server which runs the script and render the homepage with the use of a couple of routes</li>
+                                <li> <strong>Flask App:</strong> to create server which runs the script and render the
+                                    homepage with the use of a couple of routes</li>
                                 <li> <strong>Jupyter Notebook:</strong> to build and test the scraping script</li>
                                 <li> <strong>BeautifulSoup:</strong> to parse through the html scrapped</li>
                                 <li> <strong>Pandas:</strong> to form the dataset from data scrapped</li>
-                                <li> <strong>Splinter/Browser:</strong> http client used to automatically navigate the web to obtain info regarding Jupiter</li>
+                                <li> <strong>Splinter/Browser:</strong> http client used to automatically navigate the
+                                    web to obtain info regarding Jupiter</li>
                                 <li> <strong>MongoDB:</strong> database used to contain Jupiter's data collected</li>
                             </ul>
                             <div class="row mt-4">
                                 <div class="col-md-12"><img src="./assets/images/jup_1.gif" class="w-100" alt="jup_3">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="plotly" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Plotly Dashboard</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <p>
+                                Used the <b>D3 library</b> to read data from a json file, and used <b>HTML, Bootstrap, Javascript
+                                and Plotly CDN</b> to create an interactive dashboard to explore the <a href="http://robdunnlab.com/projects/belly-button-biodiversity/">Belly Button Biodiversity dataset</a> which catalogs the microbes that colonize human navels. The dashboard updates all of the plots any time that a new sample is selected. Displays the individual's demographic information and each key-value pair from the metadata JSON object on the page and adapts a gauge chart to plot the weekly washing frequency of the individual.
+                            </p>
+                            <p>
+                                The dataset reveals that a small handful of microbial species (also called operational taxonomic units, or OTUs, in the study were present in more than 70% of people, while the rest were relatively rare.
+                            </p>
+                            <div class="row mt-4 bg-dark p-4">
+                                <div class="col-md-2"></div>
+                                <div class="col-md-8"><img src="./assets/images/plotly_1.png" class="w-100" alt="jup_3">
                                 </div>
                             </div>
                         </div>
