--- a/index copy.html
+++ b/index copy.html
@@ -13,16 +13,14 @@
 
 <body>
     <div id="topDiv">
-        <div class="sessions mb-4">
-            <h4 class="text-center text-white pb-2">More than 2,600 sessions</h4>
+        <div class="sessions">
+            <h3 class="text-center text-white">More than 2,600 sessions</h3>
         </div>
-        
-        <div id='title' class="bg-dark text-white m-auto">
-            <h4 class="text-center p-3">
-                Hi, I'm <a href="https://linkedin.com/in/geronimoperez"> <span class="text-danger fst-italic"> Geronimo</span></a>, <br> a data analytics and web developer tutor.<br>  How can I help?
-            </h4> 
+        <div id='title' class="bg-dark text-white">
+            <h1 class="text-center">
+                Hi, my name is Geronimo and I'm a tutor.<br>How can I help?
+            </h1>
         </div>
-
         <div class="accordion accordion-flush mt-5" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingSix">
