--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="topDiv">
         <div class="sessions mb-4">
-            <h4 class="text-center text-white pb-2">More than 2,600 sessions</h4>
+            <h4 class="text-center text-white pb-2 fst-italic">Tutored over 2,500 sessions</h4>
         </div>
         
         <div id='title' class="bg-dark text-white m-auto">
@@ -26,7 +26,7 @@
         <div class="accordion accordion-flush mt-5" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingSix">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                         Schedule Session
                     </button>
