modified Gamazon info

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                                     fulfill the order, and tells the user.
                                 </p>
                                 <h5>Overview</h5>
-                                <p>Created Amazon-like storefront with the MySQL skills you learned this unit. The app
+                                <p>Created Amazon-like storefront with the MySQL. The app
                                     takes in orders from customers and deplete stock from the store's inventory. Tracks
                                     product sales across store's departments and then provide a summary of the
                                     highest-grossing departments in the store.
