--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 href="#">HYBC</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">New-York-Times-API</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
                                 href="#">liri-node-app</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
                                 href="#">WeatherForecast</a>
@@ -580,6 +580,7 @@
                 </div>
             </div>
         </div>
+
         <div class="modal fade" id="sqlalchemy" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
@@ -677,6 +678,7 @@
                 </div>
             </div>
         </div>
+
         <div class="modal hide" id="gamazon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
@@ -705,7 +707,7 @@
                                 </p>
                                 <p>
                                     1. Created a MySQL Database.<br>
-                                    2. Create a Table inside of that database called `products`.<br>
+                                    2. Create a Table inside of that database called products.<br>
                                     3. The products table has the following columns:</p>
                                 <span class="ms-4"> * item_id (unique id for each product)</span><br>
                                 <span class="ms-4">* product_name (Name of product)</span><br>
@@ -713,7 +715,7 @@
                                 <span class="ms-4">* price (cost to customer)</span><br>
                                 <span class="ms-4">* stock_quantity (how much of the product is available in
                                     stores)</span><br><br>
-                                4. Created a Node application called `bamazonCustomer.js`. Running this application
+                                4. Created a Node application called bamazonCustomer.js. Running this application
                                 first displays all of the items available for sale. Include the ids, names, and
                                 prices of products for sale.<br>
                                 5. The app prompts users with two messages:<br>
@@ -734,8 +736,81 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
+
+        <div class=" hide" id="liri" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">LIRI Bot</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="container">
+                                <div>
+                                    <div class="container">
+                                    <h4 class="text-center">It's like iPhone's SIRI</h4>
+
+<h4>Overview</h4>
+<p>while SIRI is a Speech Interpretation and Recognition Interface, LIRI is a _Language_ Interpretation and Recognition Interface. LIRI is a command line node app that takes in parameters and gives you back data.  It searchs Spotify for songs, Bands in Town for concerts, Twitter for tweets and OMDB for movies.
+</p>
+<h6>Liri App takes in one of the following commands:</h6>
+<p> * concert-this<br>
+    * spotify-this-song<br>
+    * movie-this<br>
+    * do-what-it-says<br>
+ </p>
+<div class="container">
+
+<h6>What Each Command Does:</h6>
+<div class="">
+    
+</div>
+<img class="w-50 float-start me-4" src='assets/images/liri1.png'>
+<b>1. node liri.js concert-this <artist/band name here>:</b>
+    This will search the Bands in Town Artist Events API ("https://rest.bandsintown.com/artists/" + artist + "/events?app_id=<api-key>") for an artist and render the following information about each event to the terminal:
+        <p>
+        * Date of the Event (use moment to format this as "MM/DD/YYYY")<br>
+        * Name of the venue<br>
+        * Venue location</p>
+
+2. node liri.js spotify-this-song '<song name here>'
+    This will show the following information about the song in your terminal/bash window
+     * Artist(s)
+     * The song's name
+     * A preview link of the song from Spotify
+     * The album that the song is from
+<img src='images/liri2.png'>
+
+3. node liri.js movie-this '<movie name here>'
+    This will output the following information to your terminal/bash window:
+       * Title of the movie.
+       * Year the movie came out.
+       * IMDB Rating of the movie.
+       * Rotten Tomatoes Rating of the movie.
+       * Country where the movie was produced.
+       * Language of the movie.
+       * Plot of the movie.
+       * Actors in the movie.
+<img src='images/liri4.png'>
+
+4. node liri.js do-what-it-says
+   Using the fs Node package, LIRI will take the text inside of random.txt and then use it to call one of LIRI's commands.
+     * It should run spotify-this-song for "I Want it That Way," as follows the text in random.txt.
+     * Edit the text in random.txt to test out the feature for movie-this and concert-this.
+<img src='images/liri2.png'>   
+</div>
+</div>
+
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
