--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
             </div>
         </div>
 
-        <div class=" hide" id="liri" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
+        <div class="modal hide" id="liri" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="false">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -764,7 +764,7 @@
 
 <h6>What Each Command Does:</h6>
 <div class="">
-    
+
 </div>
 <img class="w-50 float-start me-4" src='assets/images/liri1.png'>
 <b>1. node liri.js concert-this <artist/band name here>:</b>
