modified linkedin link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div id='title' class="bg-dark text-white m-auto">
             <h4 class="text-center p-3">
-                Hi, I'm <a href="https://linkedin.com/in/geronimoperez"> <span class="text-danger fst-italic">
+                Hi, I'm <a href="https://linkedin.com/in/geronimoperez"> <span class="fst-italic">
                         Geronimo</span></a>, <br> a data analytics and web developer tutor.<br> How can I help?
             </h4>
         </div>
